# projet_devops_riot

./: .env  .env.example  README.md  acceuil.html  docker-compose.yml  drafts_data.json  riot.py
.github/workflows/: ci.yml  security.yml  static.yml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/api/: champions.py  draft.py  lolalytics_scraper.py  main.py  matches.py  matchup_calculator.py  meta.py  models.py  players.py  recommender.py  riot_api.py  utils.py
api/tests/: conftest.py  test_auth.py  test_draft.py  test_health.py  test_masteries.py  test_meta.py  test_players.py  test_recommend.py  test_users.py
docker/: README.md
docker/grafana/dashboards/: mlflow-monitoring.json  system-metrics.json
docker/mlflow/: Dockerfile
docker/prometheus/: alerts.yml  prometheus.yml
mlflow/: .gitkeep  best_draft_model.pth  best_draft_transformer.pt  draft_model.py  draft_predictor.py  draft_transformer.py  vocab.json
mlflow/Dataset/: Dataset_download.py  Dataset_processing.py  dataset.py  fix_dataset.py  processing.py
mlflow/artifacts/: .gitkeep
riot/: .dockerignore  Dockerfile  README.md  drafts_data.json  nginx.conf  package-lock.json  package.json  vite.config.ts
riot/src/: App.vue
riot/src/assets/: ChampionPool.css  TeamSlots.css  base.css
riot/src/components/: ChampionPool.vue  HelloWorld.vue  TeamSlots.vue  TheWelcome.vue  useTeamWinRate.ts
riot/src/router/: index.ts
riot/src/stores/: user.ts
riot/src/utils/: championLoader.ts
riot/src/views/: AboutView.vue  AnalyzerView.vue  ChampionsView.vue  DraftView.vue  HomeView.vue  (+4 more)
(+2 files in other folders)
