[project]
name = "riot-api"
version = "1.0.0"
description = "API pour l'analyse de drafts League of Legends et prédictions IA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.2",
    # HTTP clients
    "requests>=2.32.3",
    "httpx>=0.27.2",
    # Database
    "sqlalchemy>=2.0.35",
    # MLflow client
    "mlflow>=2.17.0",
    # Prometheus metrics
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Utils
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    # ML Libraries
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "jaraco-context>=6.1.0",
    "wheel>=0.46.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.2",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
